# RIS-Assignment

./: README.md
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/install/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
turtlebot3_ws/install/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
turtlebot3_ws/install/lib/turtlebot3_fake_node/: turtlebot3_fake_node
turtlebot3_ws/install/lib/turtlebot3_gazebo/: turtlebot3_drive
turtlebot3_ws/install/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/share/turtlebot3_fake_node/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  turtlebot3_fake_nodeConfig-version.cmake  (+1 more)
turtlebot3_ws/install/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/tb3_maze_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_ws/src/tb3_maze_nav/config/: nav2_tb3.yaml  slam_toolbox.yaml
turtlebot3_ws/src/tb3_maze_nav/launch/: maze_world.launch.py  nav2_only.launch.py  slam_nav.launch.py
turtlebot3_ws/src/tb3_maze_nav/models/wall_050m/: model.config  model.sdf
turtlebot3_ws/src/tb3_maze_nav/resource/: tb3_maze_nav
turtlebot3_ws/src/tb3_maze_nav/rviz/: nav_slam.rviz
turtlebot3_ws/src/tb3_maze_nav/worlds/: maze.world
(+109 files in other folders)
