<?xml version="1.0"?>
<package format="3">
  <name>tb3_maze_nav</name>
  <version>0.0.1</version>
  <description>TurtleBot3 maze world, SLAM + Nav2 (ROS 2 Jazzy)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
</package>
